--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="display__grid">
       <div class="display__card grid-1">
         <div class="display__card">
-          <iframe width="506" height="646" src="https://www.youtube.com/embed/y4rvR_zGdLE?si=7cwPFfXqhaOJbBbj?rel=0&amp;autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="506" height="646" src="https://www.youtube.com/embed/TxudOHYFB34?si=aFe5_Hte8Tu3jTST" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
         </div>
       </div>
